--- a/index.html
+++ b/index.html
@@ -1,27 +1,34 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Mon Site Web</title>
+	<title>Haejin LEE</title>
+        <style type="text/css">
+        A:link { color: black; text-decoration: none;}
+        A:visited { color: black; text-decoration: none;}
+        A:hover { color: black; text-decoration: none; font-size: 15px; font-weight:400;}
+        Ul{list-style:none; padding-left:0;}
+        </style>
+
 </head>
 <body>
 	<header>
-		<h1>Bienvenue sur mon site web !</h1>
+		<h1 style="font-family: Helvetica, sans-serif; font-size: 12px; font-weight: 200;">Haejin LEE</h1>
 	</header>
 
 	<nav>
 		<ul>
-			<li><a href="page1.html">Lien vers la page 1</a></li>
-			<li><a href="page2.html">Lien vers la page 2</a></li>
-			<li><a href="page3.html">Lien vers la page 3</a></li>
+			<li style="font-family: Helvetica, sans-serif; font-size: 12px; font-weight: 200;"><a href="page1.html">home</a></li>
+			<li style="font-family: Helvetica, sans-serif; font-size: 12px; font-weight: 200;"><a href="page2.html">about</a></li>
+			<li style="font-family: Helvetica, sans-serif; font-size: 12px; font-weight: 200;"><a href="page3.html">works</a></li>
 		</ul>
 	</nav>
 
 	<main>
-		<p>Bienvenue sur mon site web ! Cliquez sur l'un des liens ci-dessus pour accéder aux différentes pages.</p>
+		<p style="font-family: Helvetica, sans-serif; font-size: 12px; font-weight: 200;">Instagram</p>
 	</main>
 
 	<footer>
-		<p>Tous droits réservés &copy; 2023</p>
+		<p style="font-family: Helvetica, sans-serif; font-size: 12px; font-weight: 200;">Tous droits réservés &copy; 2023</p>
 	</footer>
 </body>
 </html>
