--- a/index.html
+++ b/index.html
@@ -1,16 +1,32 @@
 <!DOCTYPE html>
 <html>
 <head>
+ <meta charset="UTF-8">
 	<title>Haejin LEE</title>
         <style type="text/css">
         A:link { color: black; text-decoration: none;}
         A:visited { color: black; text-decoration: none;}
-        A:hover { color: black; text-decoration: none; font-size: 15px; font-weight:400;}
+        A:hover { 
+color: black; 
+Text-decoration: none;
+animation-name: changeColor; 
+animation-duration: 1s; 
+animation-fill-mode: forwards;
+} 
+
+@keyframes changeColor {
+from { color: black; } 
+to { color: yellow; }
+}
         Ul{list-style:none; padding-left:0;}
         </style>
-
+<style>
+.left-box {background: #d9e1e2; float: left; width: 180px}
+.right-box {background: #f5dadf} 
+</style>
 </head>
 <body>
+<div class='left-box'>
 	<header>
 		<h1 style="font-family: Helvetica, sans-serif; font-size: 12px; font-weight: 200;">Haejin LEE</h1>
 	</header>
@@ -30,5 +46,7 @@
 	<footer>
 		<p style="font-family: Helvetica, sans-serif; font-size: 12px; font-weight: 200;">Tous droits réservés &copy; 2023</p>
 	</footer>
+</div>
+<div class='right-box'>___</div>
 </body>
 </html>
