--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         A:link { color: black; text-decoration: none;}
         A:visited { color: black; text-decoration: none;}
         A:hover { 
-color: black; 
+color: yellow; 
 Text-decoration: none;
 animation-name: changeColor; 
 animation-duration: 1s; 
