--- a/page1.html
+++ b/page1.html
@@ -2,13 +2,17 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	<title>Empty Page</title>
+	<title>Home</title>
 	<style>
 		body {
-			background-color: #c1d6d0;
+			background-color: transparent;
+		}
+* {
+			border: none;
 		}
 	</style>
 </head>
 <body>
+<img src="img/main_img.JPG">
 </body>
 </html>
