--- a/index.html
+++ b/index.html
@@ -17,19 +17,23 @@
 		    text-decoration: none;
 		    color: inherit;
 		}
-iframe {
-  border: none;
-}
+		iframe {
+		  border: none; width: 100%; height: 100%;
+		}
+		body {
+		  margin: 0;
+		  padding: 0;
+		}
 	</style>
 </head>
 <body>
 	<div class='left-box'>
 		<header>
-			<h1 style="font-family: Helvetica, sans-serif; font-size: 12px; font-weight: 200;">Haejin LEE</h1>
+			<h1 style="font-family: Helvetica, sans-serif; font-size: 12px; font-weight: 200; margin-left: 20px; margin-top: 20px;">Haejin LEE</h1>
 		</header>
 
 		<nav>
-			<ul id="Menu" style="font-family: Helvetica, sans-serif; font-size: 12px; font-weight: 200;">
+			<ul id="Menu" style="font-family: Helvetica, sans-serif; font-size: 12px; font-weight: 200; margin-left: 20px;">
 				<li id="Menu01"><a href="#" onclick="loadPage('page1.html');">home</a></li>
 				<li id="Menu02"><a href="#" onclick="loadPage('page2.html');">about</a></li>
 				<li id="Menu03"><a href="#" onclick="loadPage('page3.html');">works</a></li>
@@ -37,11 +41,11 @@ iframe {
 		</nav>
 
 		<main>
-			<p style="font-family: Helvetica, sans-serif; font-size: 12px; font-weight: 200;">Instagram</p>
+			<p style="font-family: Helvetica, sans-serif; font-size: 12px; font-weight: 200; margin-left: 20px;"><img src="img/Instagram_logo_2016.svg.png" width="10"> Instagram</p>
 		</main>
 
 		<footer>
-			<p style="font-family: Helvetica, sans-serif; font-size: 12px; font-weight: 200;">Tous droits réservés &copy; 2023</p>
+			<p style="font-family: Helvetica, sans-serif; font-size: 12px; font-weight: 200; margin-left: 20px;">All rights reserved &copy; 2023 [tiredgroove]</p>
 		</footer>
 	</div>
 
