--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
 		    text-decoration: none;
 		    color: inherit;
 		}
+		#instaLink {
+		    text-decoration: none;
+		    color: inherit;
+		}
 		iframe {
 		  border: none; width: 100%; height: 100%;
 		}
@@ -41,7 +45,7 @@
 		</nav>
 
 		<main>
-			<p style="font-family: Helvetica, sans-serif; font-size: 12px; font-weight: 200; margin-left: 20px;"><img src="img/Instagram_logo_2016.svg.png" width="10"> Instagram</p>
+			<p style="font-family: Helvetica, sans-serif; font-size: 12px; font-weight: 200; margin-left: 20px;"><img src="img/Instagram_logo_2016.svg.png" width="10"> <a href="https://www.instagram.com/tiredgroove" id="instaLink">Instagram</a></p>
 		</main>
 
 		<footer>
@@ -90,6 +94,17 @@
 		Menu03.addEventListener("mouseout", function() {
 			Menu03.classList.remove('changecolor');
 			Menu03.style.color = '';
+		});
+
+		const instaLink = document.getElementById('instaLink');
+		instaLink.addEventListener("mouseover", function() {
+			instaLink.classList.add('changecolor');
+			instaLink.style.color = randomColor();
+		});
+
+		instaLink.addEventListener("mouseout", function() {
+			instaLink.classList.remove('changecolor');
+			instaLink.style.color = '';
 		});
 
 		function loadPage(url) {
