--- a/page1.html
+++ b/page1.html
@@ -1,5 +1,11 @@
 <!DOCTYPE html>
 <html>
+<style>
+body {
+  margin: 0;
+  padding: 0;
+}
+</style>
 <head>
 	<meta charset="UTF-8">
 	<title>Home</title>
