--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 		</nav>
 
 		<main>
-			<p style="font-family: Helvetica, sans-serif; font-size: 12px; font-weight: 200; margin-left: 20px;"><img src="img/Instagram_logo_2016.svg.png" width="10"> <a href="https://www.instagram.com/tiredgroove" id="instaLink">Instagram</a></p>
+			<p style="font-family: Helvetica, sans-serif; font-size: 12px; font-weight: 200; margin-left: 20px;"><img src="img/Instagram_logo_2016.svg.png" width="10"> <a href="https://www.instagram.com/tiredgroove" id="instaLink" target="_blank">Instagram</a></p>
 		</main>
 
 		<footer>
