--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<meta charset="UTF-8">
 	<title>Haejin LEE</title>
 	<style>
-		.left-box {background: transparent; float: left; width: 180px; height: 100%;}
+		.left-box {position: fixed; background: white; float: left; width: 180px; height: 100%;}
 		.right-box {background: transparent; width: 100%;
 			height: 100%; margin-left: 180px;} 
 		.changecolor {transition: color 0.2s ease;}
