--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <html>
 <head>
 	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Haejin LEE</title>
 	<style>
 		.left-box {position: fixed; background: white; float: left; width: 180px; height: 100%;}
 		.right-box {background: transparent; width: 100%;
 			height: 100%; margin-left: 180px;} 
 		.changecolor {transition: color 0.2s ease;}
-		
 		#Menu {
 		    list-style: none;
 		    padding: 0;
@@ -27,6 +27,51 @@
 		body {
 		  margin: 0;
 		  padding: 0;
+		}
+		footer {
+		  position: fixed;
+		  bottom: 0;
+		  left: 0;
+		  right: 0;
+		  height: 30px;
+		  background-color: white;
+		  text-align: left;
+		  float: left;
+		  width: 180px;
+		}
+/* Media queries */
+        @media screen and (max-width: 768px) {
+            .left-box {
+                position: static;
+                width: 100%;
+                height: 100px;
+            }
+            footer {
+                position: absolute;
+                width: 100%;
+		height: 30px;
+            } 
+            #Menu {
+                display: flex;
+                flex-direction: row;
+                justify-content: left;
+            }
+            
+            #Menu li {
+                margin: 0;
+		padding-right: 5px;
+		padding-left: 0;
+            }
+            
+            .right-box {
+                margin-top: 0;
+                margin-left: 0;
+		Width: 100%
+		Height: 100%
+	    }
+
+	    #instaLink {
+		position: flexible;
 		}
 	</style>
 </head>
@@ -49,7 +94,7 @@
 		</main>
 
 		<footer>
-			<p style="font-family: Helvetica, sans-serif; font-size: 12px; font-weight: 200; margin-left: 20px;">All rights reserved &copy; 2023 [tiredgroove]</p>
+			<p style="font-family: Helvetica, sans-serif; font-size: 8px; font-weight: 200; margin-left: 20px;">All rights reserved &copy; 2023</p>
 		</footer>
 	</div>
 
