--- a/index.html
+++ b/index.html
@@ -42,12 +42,12 @@
 /* Media queries */
         @media screen and (max-width: 768px) {
             .left-box {
-                position: static;
+                position: fixed;
                 width: 100%;
                 height: 100px;
             }
             footer {
-                position: absolute;
+                position: fixed;
                 width: 100%;
 		height: 30px;
             } 
