--- a/index.html
+++ b/index.html
@@ -4,9 +4,19 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Haejin LEE</title>
 	<style>
-		.left-box {position: fixed; background: white; float: left; width: 180px; height: 100%;}
-		.right-box {background: transparent; width: 100%;
-			height: 100%; margin-left: 180px;} 
+		.left-box {
+			position: fixed; 
+			background: white; 
+			float: left; 
+			width: 180px; 
+			height: 100%;
+		}
+		.right-box {
+			background: transparent; 
+			width: auto;
+			height: auto;
+			margin-left: 180px;
+		} 
 		.changecolor {transition: color 0.2s ease;}
 		#Menu {
 		    list-style: none;
@@ -64,10 +74,11 @@
             }
             
             .right-box {
-                margin-top: 0;
+                position: fixed;
+		margin-top: 100px;
                 margin-left: 0;
-		Width: 100%
-		Height: 100%
+		Width: 100%;
+		height: 81%;
 	    }
 
 	    #instaLink {
