--- a/page1.html
+++ b/page1.html
@@ -16,6 +16,15 @@ body {
 * {
 			border: none;
 		}
+		img {
+			max-width: auto;
+			height: auto;
+		}
+		@media (min-width: 300px) {
+			img {
+				max-width: 100%;
+			}
+		}
 	</style>
 </head>
 <body>
