--- a/page3.html
+++ b/page3.html
@@ -28,20 +28,49 @@
 		img {
 			margin-bottom: 30px;
 		}
-	@media only screen and (max-width: 768px) {
-  img {
-    width: 100%;
-  }
-}
+		#zoom-box {
+			position: absolute;
+			top: 0;
+			left: 0;
+			width: 100%;
+			height: 100%;
+			background-color: rgba(255, 255, 255, 0.8);
+			z-index: 9999;
+			display: flex;
+			align-items: center;
+			justify-content: center;
+			opacity: 0;
+			transition: opacity 0.5s ease;
+		}
+		#zoom-box img {
+			max-width: 100%;
+			max-height: 100%;
+		}
+		@media only screen and (max-width: 768px) {
+			img {
+				width: 100%;
+			}
+		}
 	</style>
 	<script>
 		function zoomImage() {
 			var img = document.getElementById("work-image");
-			if (img.style.width === "500px") {
-				img.style.width = "100%";
-			} else {
-				img.style.width = "500px";
-			}
+			var zoomBox = document.createElement("div");
+			zoomBox.id = "zoom-box";
+			var zoomImg = document.createElement("img");
+			zoomImg.src = img.src;
+			zoomBox.appendChild(zoomImg);
+			document.body.appendChild(zoomBox);
+			setTimeout(function() {
+				zoomBox.style.opacity = "1";
+			}, 50);
+			zoomBox.addEventListener("click", function() {
+				zoomBox.style.opacity = "0";
+				setTimeout(function() {
+					zoomBox.removeChild(zoomImg);
+					document.body.removeChild(zoomBox);
+				}, 500);
+			});
 		}
 	</script>
 </head>
