--- a/page1.html
+++ b/page1.html
@@ -29,5 +29,11 @@ body {
 </head>
 <body>
 <img src="img/main_img.JPG">
+<script>
+document.addEventListener('contextmenu', function(e) {
+			// prevent right-click menu from appearing
+			e.preventDefault();
+		});
+</script>
 </body>
 </html>
