--- a/page3.html
+++ b/page3.html
@@ -84,5 +84,11 @@
 </div>
 <div>b</div>
 <div>c</div>
+<script>
+document.addEventListener('contextmenu', function(e) {
+			// prevent right-click menu from appearing
+			e.preventDefault();
+		});
+</script>
 </body>
 </html>
