--- a/page2.html
+++ b/page2.html
@@ -47,5 +47,12 @@ Pellentesque congue enim sit amet aliquam efficitur. Donec consequat elit non el
 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed varius sapien vel justo condimentum, sit amet scelerisque metus tincidunt. Praesent ac nunc in tellus dignissim ultricies. Nulla mollis laoreet justo eu dignissim. Curabitur at ligula sed dolor vestibulum venenatis id id ligula. Duis vel malesuada eros, id interdum metus. Sed consectetur, sapien in lacinia dictum, purus lacus ultrices ante, vel commodo augue nisl vel dolor. Nam tristique justo eu nisl bibendum egestas. Quisque dapibus quam augue, sit amet interdum libero ultricies vitae.
 <br><br>
 Pellentesque congue enim sit amet aliquam efficitur. Donec consequat elit non elit gravida ultrices. Integer iaculis arcu vel commodo tristique. Fusce auctor mi at nisi hendrerit, vitae bibendum felis dapibus. Suspendisse a nibh sit amet sapien feugiat maximus vel eu dolor. Integer tincidunt quam eget dolor ultrices, ac varius nisi tempor. Praesent vel eros id libero tristique vehicula. Nullam sed magna in justo varius vehicula eu non ex.</p>
+
+<script>
+document.addEventListener('contextmenu', function(e) {
+			// prevent right-click menu from appearing
+			e.preventDefault();
+		});
+</script>
 </body>
 </html>
