--- a/page2.html
+++ b/page2.html
@@ -4,6 +4,14 @@
 	<meta charset="UTF-8">
 	<title>about</title>
 	<style>
+		* {
+		  user-select: none;
+		  -webkit-user-select: none; /* Safari */
+		  -moz-user-select: none; /* Firefox */
+		  -ms-user-select: none; /* Internet Explorer/Edge */
+		  -o-user-select: none; /* Opera */
+		}
+
 		body {
 			background-color: transparent;
 			padding-left: 20px;
@@ -12,7 +20,7 @@
 		h1 {
 			font-size: 18px;
 			font-family: helvetica, sans-serif;
-			font-weight: 200;
+			font-weight: bold;
 			text-align: left;
 			margin-top: 30px;
 			margin-bottom: 30px;
@@ -24,6 +32,7 @@
 			text-align: left;
 			margin-top: 0;
 			margin-bottom: 0;
+			max-width: 700px;
 		}
 		img {
 			margin-bottom: 30px;
