--- a/index.html
+++ b/index.html
@@ -4,6 +4,14 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Haejin LEE</title>
 	<style>
+		* {
+		  user-select: none;
+		  -webkit-user-select: none; /* Safari */
+		  -moz-user-select: none; /* Firefox */
+		  -ms-user-select: none; /* Internet Explorer/Edge */
+		  -o-user-select: none; /* Opera */
+		}
+
 		.left-box {
 			position: fixed; 
 			background: white; 
@@ -16,7 +24,7 @@
 			width: auto;
 			height: auto;
 			margin-left: 180px;
-		} 
+		}
 		.changecolor {transition: color 0.2s ease;}
 		#Menu {
 		    list-style: none;
@@ -37,6 +45,7 @@
 		body {
 		  margin: 0;
 		  padding: 0;
+		  scroll-behavior: smooth;
 		}
 		footer {
 		  position: fixed;
@@ -49,8 +58,8 @@
 		  float: left;
 		  width: 180px;
 		}
-/* Media queries */
-        @media screen and (max-width: 768px) {
+
+        @media screen and (max-width: 800px) {
             .left-box {
                 position: fixed;
                 width: 100%;
@@ -58,7 +67,8 @@
             }
             footer {
                 position: fixed;
-                width: 100%;
+                Margin-top: 5px;
+		width: 100%;
 		height: 30px;
             } 
             #Menu {
@@ -84,16 +94,17 @@
 	    #instaLink {
 		position: flexible;
 		}
+
 	</style>
 </head>
 <body>
 	<div class='left-box'>
 		<header>
-			<h1 style="font-family: Helvetica, sans-serif; font-size: 12px; font-weight: 200; margin-left: 20px; margin-top: 20px;">Haejin LEE</h1>
+			<h1 style="font-family: Helvetica, sans-serif; font-size: 15px; font-weight: 400; margin-left: 20px; margin-top: 20px;">Haejin LEE</h1>
 		</header>
 
 		<nav>
-			<ul id="Menu" style="font-family: Helvetica, sans-serif; font-size: 12px; font-weight: 200; margin-left: 20px;">
+			<ul id="Menu" style="font-family: Helvetica, sans-serif; font-size: 13px; font-weight: 200; margin-left: 20px;">
 				<li id="Menu01"><a href="#" onclick="loadPage('page1.html');">home</a></li>
 				<li id="Menu02"><a href="#" onclick="loadPage('page2.html');">about</a></li>
 				<li id="Menu03"><a href="#" onclick="loadPage('page3.html');">works</a></li>
@@ -173,6 +184,7 @@ document.addEventListener('contextmenu', function(e) {
 			// prevent right-click menu from appearing
 			e.preventDefault();
 		});
+
 	</script>
 </body>
 </html>
