--- a/index.html
+++ b/index.html
@@ -74,7 +74,8 @@
             #Menu {
                 display: flex;
                 flex-direction: row;
-                justify-content: left;
+                justify-content: right;
+		padding-right: 20px;
             }
             
             #Menu li {
@@ -90,11 +91,11 @@
 		Width: 100%;
 		height: 81%;
 	    }
-
 	    #instaLink {
 		position: flexible;
+		float: right;
+		padding-right: 25px;
 		}
-
 	</style>
 </head>
 <body>
@@ -109,10 +110,11 @@
 				<li id="Menu02"><a href="#" onclick="loadPage('page2.html');">about</a></li>
 				<li id="Menu03"><a href="#" onclick="loadPage('page3.html');">works</a></li>
 			</ul>
+<p style="font-family: Helvetica, sans-serif; font-size: 12px; font-weight: 200; margin-left: 20px;"><a href="https://www.instagram.com/tiredgroove" id="instaLink" target="_blank"><img src="img/Instagram_logo_2016.svg.png" width="10"> Instagram</a></p>
+
 		</nav>
 
 		<main>
-			<p style="font-family: Helvetica, sans-serif; font-size: 12px; font-weight: 200; margin-left: 20px;"><img src="img/Instagram_logo_2016.svg.png" width="10"> <a href="https://www.instagram.com/tiredgroove" id="instaLink" target="_blank">Instagram</a></p>
 		</main>
 
 		<footer>
