--- a/page3.html
+++ b/page3.html
@@ -116,7 +116,7 @@
 <body>
 	<div class='work'>
 		<h1>work</h1>
-		<img id="work-image-1" src="img/work/jardinenlair.JPG" width="300" onclick="zoomImage(this)">
+		<img id="work-image-1" src="img/work/jardinenlair.png" width="300" onclick="zoomImage(this)">
 		<br><br>
 		<p style="font-weight: bold; font-size: 10px; font-style: italic; text-align: right;">jardin en l'air, installation, mixed materials, 2022
 		</p>
@@ -124,13 +124,13 @@
 		<p>le travail a été conçu pour envisager la forme et la couleur ....le travail a été conçu pour envisager la forme et la couleur ....le travail a été conçu pour envisager la forme et la couleur ....le travail a été conçu pour envisager la forme et la couleur ....le travail a été conçu pour envisager la forme et la couleur ....le travail a été conçu pour envisager la forme et la couleur ....le travail a été conçu pour envisager la forme et la couleur ....le travail a été conçu pour envisager la forme et la couleur ....
 		</p>
 <br><br><br>
-		<img id="work-image-2" src="img/work/jardinenlair1.JPG" width="100" onclick="zoomImage(this)">
-		<img id="work-image-3" src="img/work/jardinenlair2.JPG" width="100" onclick="zoomImage(this)">
-		<img id="work-image-4" src="img/work/jardinenlair3.JPG" width="100" onclick="zoomImage(this)">
+		<img id="work-image-2" src="img/work/jardinenlair1.png" width="100" onclick="zoomImage(this)">
+		<img id="work-image-3" src="img/work/jardinenlair2.png" width="100" onclick="zoomImage(this)">
+		<img id="work-image-4" src="img/work/jardinenlair3.png" width="100" onclick="zoomImage(this)">
 
 <br><br><br><p>____________________________________</p><br><br><br>
 
-		<img id="work-image-1" src="img/work/feuillesmortes1.JPG" width="300" onclick="zoomImage(this)">
+		<img id="work-image-1" src="img/work/feuillesmortes1.png" width="300" onclick="zoomImage(this)">
 		<br><br>
 		<p style="font-weight: bold; font-size: 10px; font-style: italic; text-align: right;">feuilles mortes, installation, paper, 2022
 		</p>
@@ -138,13 +138,13 @@
 		<p>le travail a été conçu pour envisager la forme et la couleur ....le travail a été conçu pour envisager la forme et la couleur ....le travail a été conçu pour envisager la forme et la couleur ....le travail a été conçu pour envisager la forme et la couleur ....le travail a été conçu pour envisager la forme et la couleur ....le travail a été conçu pour envisager la forme et la couleur ....le travail a été conçu pour envisager la forme et la couleur ....le travail a été conçu pour envisager la forme et la couleur ....
 		</p>
 <br><br><br>
-		<img id="work-image-2" src="img/work/feuillesmortes2.JPG" width="100" onclick="zoomImage(this)">
-		<img id="work-image-3" src="img/work/feuillesmortes3.JPG" width="100" onclick="zoomImage(this)">
-		<img id="work-image-4" src="img/work/feuillesmortes4.JPG" width="100" onclick="zoomImage(this)">
+		<img id="work-image-2" src="img/work/feuillesmortes2.png" width="100" onclick="zoomImage(this)">
+		<img id="work-image-3" src="img/work/feuillesmortes3.png" width="100" onclick="zoomImage(this)">
+		<img id="work-image-4" src="img/work/feuillesmortes4.png" width="100" onclick="zoomImage(this)">
 
 <br><br><br><p>____________________________________</p><br><br><br>
 
-		<img id="work-image-1" src="img/work/doppelganger1.JPG" width="300" onclick="zoomImage(this)">
+		<img id="work-image-1" src="img/work/doppelganger1.png" width="300" onclick="zoomImage(this)">
 		<br><br>
 		<p style="font-weight: bold; font-size: 10px; font-style: italic; text-align: right;">Doppelgänger, installation, acrylic paint on carton, 2022
 		</p>
@@ -152,7 +152,7 @@
 		<p>le travail a été conçu pour envisager la forme et la couleur ....le travail a été conçu pour envisager la forme et la couleur ....le travail a été conçu pour envisager la forme et la couleur ....le travail a été conçu pour envisager la forme et la couleur ....le travail a été conçu pour envisager la forme et la couleur ....le travail a été conçu pour envisager la forme et la couleur ....le travail a été conçu pour envisager la forme et la couleur ....le travail a été conçu pour envisager la forme et la couleur ....
 		</p>
 <br><br><br>
-		<img id="work-image-2" src="img/work/doppelganger2.JPG" width="100" onclick="zoomImage(this)">
+		<img id="work-image-2" src="img/work/doppelganger2.png" width="100" onclick="zoomImage(this)">
 
 <br><br><br><p>____________________________________</p><br><br><br>
 
