--- a/page1.html
+++ b/page1.html
@@ -33,12 +33,14 @@ body {
 .main_img {
   position: relative;
   z-index: 0;
-  height: 100%;
+  width: auto;
+  height: auto;
   overflow: hidden;
+  Backdrop-filter: blur(5px);
 }
 .main_img img {
   display: block;
-  max-width: 100%;
+  Width: 100%;
   height: auto;
 		}
 </style>
