--- a/page1.html
+++ b/page1.html
@@ -36,6 +36,7 @@ body {
   width: auto;
   height: auto;
   overflow: hidden;
+  -webkit-Backdrop-filter: blur(5px);
   Backdrop-filter: blur(5px);
 }
 .main_img img {
