--- a/page1.html
+++ b/page1.html
@@ -21,6 +21,7 @@ body {
   width: 100%;
   height: 100%;
   transform: scaleX(-1);
+	-webkit-Backdrop-filter: blur(10px);
   Backdrop-filter: blur(10px);
   Mix-blend-mode: screen;
 }
