--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Haejin LEE</title>
-    <!-- <link rel="icon" href="static/favicon.ico" type="image/x-icon"> -->
+    <link rel="icon" href="static/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="static/styles/main.css">
     <!-- <title>Three.JS-Webpack Boilerplate</title> -->
   </head>
