--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Haejin LEE</title>
     <link rel="icon" href="static/favicon.ico" type="image/x-icon">
-    <link rel="shortcut icon" href="static/favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="static/favicon-1.ico" type="image/x-icon" />
     <link rel="apple-touch-icon" sizes="180x180" href="static/apple-touch-icon.png">
     <link rel="stylesheet" href="static/styles/main.css">
   
