--- a/src/01.html
+++ b/src/01.html
@@ -19,7 +19,7 @@
       position: fixed;
       top: 0;
       left: 0;
-      z-index: 1;
+      z-index: 0;
       width: 100%;
       height: 100%;
       transform: scaleX(-1);
@@ -33,7 +33,7 @@
     }
     .main_img {
       position: relative;
-      z-index: 0;
+      z-index: -1;
       width: auto;
       height: auto;
       overflow: hidden;
@@ -43,16 +43,42 @@
       Width: 100%;
       height: auto;
         }
+
+    .youtube-video {
+      position: absolute;
+      width: 560px;
+      height: 315px;
+      border: 1px solid #ccc;
+      background-color: #f9f9f9;
+      margin-bottom: 20px;
+        }
+    .youtube-video iframe {
+      width: 100%;
+      height: 100%;
+      border: none;
+      z-index: 1;
+        }
+
+    @media screen and (max-width: 560px) {
+    .youtube-video {
+        position: absolute;
+        width: 100%;
+    }}
+
     </style>
   </head>
 <body>
 
 <div class="layer_main">
-  <img src="img/layer_main.gif">
+  <!-- <img src="img/layer_main.gif"> -->
 </div>
 
 <div class="main_img">
-  <img src="img/main_img.png">
+  <!-- <img src="img/main_img.png"> -->
+</div>
+
+<div class="youtube-video">
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/0wHDzcQz744" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 </div>
 
 <script>
