--- a/src/03.html
+++ b/src/03.html
@@ -14,8 +14,8 @@
 
 		body {
 			background-color: transparent;
-			padding-left: 20px;
-			padding-right: 20px;
+			/* padding-left: 20px;
+			padding-right: 20px; */
 		}
 		h1 {
 			font-size: 18px;
@@ -124,9 +124,9 @@
 		<p>le travail a été conçu pour envisager la forme et la couleur ....le travail a été conçu pour envisager la forme et la couleur ....le travail a été conçu pour envisager la forme et la couleur ....le travail a été conçu pour envisager la forme et la couleur ....le travail a été conçu pour envisager la forme et la couleur ....le travail a été conçu pour envisager la forme et la couleur ....le travail a été conçu pour envisager la forme et la couleur ....le travail a été conçu pour envisager la forme et la couleur ....
 		</p>
 <br><br><br>
-		<img id="work-image-2" src="img/work/jardinenlair1.png" width="100" onclick="zoomImage(this)">
-		<img id="work-image-3" src="img/work/jardinenlair2.png" width="100" onclick="zoomImage(this)">
-		<img id="work-image-4" src="img/work/jardinenlair3.png" width="100" onclick="zoomImage(this)">
+		<img id="work-image-2" src="img/work/jardinenlair1.png" width="98" onclick="zoomImage(this)">
+		<img id="work-image-3" src="img/work/jardinenlair2.png" width="98" onclick="zoomImage(this)">
+		<img id="work-image-4" src="img/work/jardinenlair3.png" width="98" onclick="zoomImage(this)">
 
 <br><br><br><p>____________________________________</p><br><br><br>
 
@@ -138,9 +138,9 @@
 		<p>le travail a été conçu pour envisager la forme et la couleur ....le travail a été conçu pour envisager la forme et la couleur ....le travail a été conçu pour envisager la forme et la couleur ....le travail a été conçu pour envisager la forme et la couleur ....le travail a été conçu pour envisager la forme et la couleur ....le travail a été conçu pour envisager la forme et la couleur ....le travail a été conçu pour envisager la forme et la couleur ....le travail a été conçu pour envisager la forme et la couleur ....
 		</p>
 <br><br><br>
-		<img id="work-image-2" src="img/work/feuillesmortes2.png" width="100" onclick="zoomImage(this)">
-		<img id="work-image-3" src="img/work/feuillesmortes3.png" width="100" onclick="zoomImage(this)">
-		<img id="work-image-4" src="img/work/feuillesmortes4.png" width="100" onclick="zoomImage(this)">
+		<img id="work-image-2" src="img/work/feuillesmortes2.png" width="98" onclick="zoomImage(this)">
+		<img id="work-image-3" src="img/work/feuillesmortes3.png" width="98" onclick="zoomImage(this)">
+		<img id="work-image-4" src="img/work/feuillesmortes4.png" width="98" onclick="zoomImage(this)">
 
 <br><br><br><p>____________________________________</p><br><br><br>
 
@@ -152,7 +152,7 @@
 		<p>le travail a été conçu pour envisager la forme et la couleur ....le travail a été conçu pour envisager la forme et la couleur ....le travail a été conçu pour envisager la forme et la couleur ....le travail a été conçu pour envisager la forme et la couleur ....le travail a été conçu pour envisager la forme et la couleur ....le travail a été conçu pour envisager la forme et la couleur ....le travail a été conçu pour envisager la forme et la couleur ....le travail a été conçu pour envisager la forme et la couleur ....
 		</p>
 <br><br><br>
-		<img id="work-image-2" src="img/work/doppelganger2.png" width="100" onclick="zoomImage(this)">
+		<img id="work-image-2" src="img/work/doppelganger2.png" width="98" onclick="zoomImage(this)">
 
 <br><br><br><p>____________________________________</p><br><br><br>
 
