--- a/src/02.html
+++ b/src/02.html
@@ -14,8 +14,8 @@
 
 		body {
 			background-color: transparent;
-			padding-left: 20px;
-			padding-right: 20px;
+			/* padding-left: 20px;
+			padding-right: 20px; */
 		}
 		h1 {
 			font-size: 18px;
