menu and font css replaced

--- a/index.html
+++ b/index.html
@@ -13,17 +13,16 @@
   <body>
     <div class='left-box'>
       <header>
-        <h1 style="font-family: Helvetica, sans-serif; font-size: 15px; font-weight: 400; margin-left: 20px; margin-top: 20px;">Haejin LEE</h1>
-      </header>
-  
-      <nav>
-        <ul id="Menu" style="font-family: Helvetica, sans-serif; font-size: 13px; font-weight: 200; margin-left: 20px;">
+        <h1 class="topName">Haejin LEE</h1>
+      </header>  
+      <nav class="middleMenu">
+        <ul id="Menu">
           <li id="Menu01"><a href="#" onclick="loadPage('src/01.html');">home</a></li>
           <li id="Menu02"><a href="#" onclick="loadPage('src/02.html');">about</a></li>
           <li id="Menu03"><a href="#" onclick="loadPage('src/03.html');">work</a></li>
           <li id="Menu04"><a href="#" onclick="loadPage('src/04.html');">etc</a></li>
         </ul>
-        <p style="font-family: Helvetica, sans-serif; font-size: 12px; font-weight: 200; margin-left: 20px;">
+        <p>
           <a href="https://www.instagram.com/tiredgroove" id="instaLink" target="_blank"><img src="src/img/Instagram_logo_2016.svg.png" width="10"> Instagram</a>
         </p>
       </nav>
