--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           <li id="Menu04"><a href="#" onclick="loadPage('src/04.html');">etc</a></li>
         </ul>
         <p>
-          <a href="https://www.instagram.com/tiredgroove" id="instaLink" target="_blank"><img src="src/img/Instagram_logo_2016.svg.png" width="10"> Instagram</a>
+          <a href="https://www.instagram.com/tiredgroove" id="instaLink" target="_blank"><img src="src/img/Instagram_logo_2016.svg.png" class="insta_logo"> Instagram</a>
         </p>
       </nav>
       <main>
@@ -34,8 +34,13 @@
     </div>
     <div class='right-box' div id="main_page">
       <iframe src="src/01.html" id="myFrame">
-      
       </iframe>
+
+      <!-- OAuth 사용자 키:
+      RrHsh681tXyWZjnnYVeoB4dQ7Yo7EV1BYTXUdxEsb27g4nKH75
+      OAuth 사용자 암호:
+      show -->
+
     </div>
     <script src="src/script.js"></script>  
 
