--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       OAuth 사용자 암호:
       show -->
     </div>
-<!-- shder -->
+<!-- shader -->
 <script id="vertexShader" type="x-shader/x-vertex">
   precision highp float;
 
@@ -61,10 +61,10 @@
 
   void main(){
 
-    vPosition = offset * max( abs( sineTime * 2.0 + 1.0 ), 0.5 ) + position;
+    vPosition = offset * max( abs( sineTime * 5.0 + 1.0 ), 3.0 ) + position; 
     vec4 orientation = normalize( mix( orientationStart, orientationEnd, sineTime ) );
     vec3 vcV = cross( orientation.xyz, vPosition );
-    vPosition = vcV * ( 2.0 * orientation.w ) + ( cross( orientation.xyz, vcV ) * 2.0 + vPosition );
+    vPosition = vcV * ( 4.0 * orientation.w ) + ( cross( orientation.xyz, vcV ) * 2.0 + vPosition );
 
     vColor = color;
 
