--- a/src/01.html
+++ b/src/01.html
@@ -12,7 +12,8 @@
 		  -o-user-select: none; /* Opera */
 		}
     body {
-      margin: 0;
+      /* margin: 0; */
+      margin-top: 20px;
       padding: 0;
     }
     .layer_main {
@@ -63,6 +64,8 @@
     .youtube-video {
         position: absolute;
         width: 100%;
+        left: 0;
+        right: 0;
     }}
 
     </style>
