--- a/src/03.html
+++ b/src/03.html
@@ -14,8 +14,7 @@
 
 		body {
 			background-color: transparent;
-			/* padding-left: 20px;
-			padding-right: 20px; */
+			padding-left: 50px;
 		}
 		h1 {
 			font-size: 18px;
@@ -32,10 +31,22 @@
 			text-align: left;
 			margin-top: 0;
 			margin-bottom: 0;
-			max-width: 300px;
+			max-width: 500px;
 		}
 		img {
 			margin-bottom: 0;
+		}
+		#work-image-1 {
+			width: 500px;
+		}
+		#work-image-2 {
+			width: 98px;
+		}
+		#work-image-3 {
+			width: 98px;
+		}
+		#work-image-4 {
+			width: 98px;
 		}
 		#zoom-box {
 			position: fixed;
@@ -86,9 +97,31 @@
   opacity: 1;
 }
 	
-		@media only screen and (max-width: 800px) {
-			img {
+		@media only screen and (max-width: 560px) {
+			body {
+			background-color: transparent;
+			display: flex;
+  			align-items: center;
+  			justify-content: center;
+			padding-left: 0;
+			}
+			p {
+			max-width: 300px;
+		}
+			/* img {
 				max-width: 300px;
+			} */
+			#work-image-1 {
+				width: 300px;
+			}
+			#work-image-2 {
+				width: 98px;
+			}
+			#work-image-3 {
+				width: 98px;
+			}
+			#work-image-4 {
+				width: 98px;
 			}
 		}
 	</style>
@@ -116,43 +149,67 @@
 <body>
 	<div class='work'>
 		<h1>work</h1>
-		<img id="work-image-1" src="img/work/jardinenlair.png" width="300" onclick="zoomImage(this)">
+		<img id="work-image-1" src="img/work/jardinenlair.jpg" onclick="zoomImage(this)">
 		<br><br>
-		<p style="font-weight: bold; font-size: 10px; font-style: italic; text-align: right;">jardin en l'air, installation, mixed materials, 2022
+		<p style="font-weight: bold; font-size: 10px; font-style: italic; text-align: right;">
+			jardin en l'air, installation, mixed materials, 2022
 		</p>
 		<br>
-		<p>le travail a été conçu pour envisager la forme et la couleur ....le travail a été conçu pour envisager la forme et la couleur ....le travail a été conçu pour envisager la forme et la couleur ....le travail a été conçu pour envisager la forme et la couleur ....le travail a été conçu pour envisager la forme et la couleur ....le travail a été conçu pour envisager la forme et la couleur ....le travail a été conçu pour envisager la forme et la couleur ....le travail a été conçu pour envisager la forme et la couleur ....
+		<p>J’ai trempés dans la colle de papier peint puis posés sur la bâche en faisant des anneaux au hasard. Trois à quatre jours plus tard au séchage, la colle durcie les rendent solides afin qu’ils se tiennent à leur propre forme figée. Comme un travail répétitif quotidien, j’ai appliqué le même protocole mais le résultat jamais similaire mais était différent. 
+
+			Les fils en couleurs sont posés au hasard sur les châssis d’un mètre carré horizontalement suspendus au plafond. Le travail consiste davantage à décomposer la peinture classique, et ce afin d’éliminer les éléments constitutifs et de redéfinir avec les matériaux impropre en la matière. 
+			
+			Je ne m’attends pas que les spectateurs reconnaissent ce à quoi ressembleraient ces fibres assemblées mais plutôt qu’ils se retrouvent dans l’immersion d’étrangetés crées par la rigidité de ces matériaux intimes flexibles et souples. L’ambiguïté sensorielle s’explique à la fois dans la perspective anthropologique et plastique: une dimension de douze mètres carré en plein espace, la suspension à la hauteur d’un mètre soixante (à la hauteur de mes yeux) qui permet de proposer de différents angles de perspective aux spectateurs. La projection directe de l’éclairage sur fils crée un réseau d’ombres, dans laquelle les spectateurs déambulent.
 		</p>
 <br><br><br>
-		<img id="work-image-2" src="img/work/jardinenlair1.png" width="98" onclick="zoomImage(this)">
-		<img id="work-image-3" src="img/work/jardinenlair2.png" width="98" onclick="zoomImage(this)">
-		<img id="work-image-4" src="img/work/jardinenlair3.png" width="98" onclick="zoomImage(this)">
+		<img id="work-image-2" src="img/work/jardinenlair1.jpg" onclick="zoomImage(this)">
+		<img id="work-image-3" src="img/work/jardinenlair2.jpg" onclick="zoomImage(this)">
+		<img id="work-image-4" src="img/work/jardinenlair3.jpg" onclick="zoomImage(this)">
 
 <br><br><br><p>____________________________________</p><br><br><br>
 
-		<img id="work-image-1" src="img/work/feuillesmortes1.png" width="300" onclick="zoomImage(this)">
+		<img id="work-image-1" src="img/work/papiercouleur_01.jpg" onclick="zoomImage(this)">
 		<br><br>
-		<p style="font-weight: bold; font-size: 10px; font-style: italic; text-align: right;">feuilles mortes, installation, paper, 2022
+		<p style="font-weight: bold; font-size: 10px; font-style: italic; text-align: right;">
+			Papiers couleurs, installation, paper, 2021
 		</p>
 		<br>
-		<p>le travail a été conçu pour envisager la forme et la couleur ....le travail a été conçu pour envisager la forme et la couleur ....le travail a été conçu pour envisager la forme et la couleur ....le travail a été conçu pour envisager la forme et la couleur ....le travail a été conçu pour envisager la forme et la couleur ....le travail a été conçu pour envisager la forme et la couleur ....le travail a été conçu pour envisager la forme et la couleur ....le travail a été conçu pour envisager la forme et la couleur ....
+		<p>En répétant les pliages et dépliages, les papiers manipulés se chevauchent l’un sur l’autre dans une cohésion de continuité et d’infinité. Le papier est généralement utilisé comme support à écrire et dessiner, mais aussi comme médium tels que l’origami. Par ailleurs, ce mot origami signifie littéralement le pliage du papier en japonais. La matière principale est le papier multicolore carré optimisé à origami, avec lequel j’ai créé un protocole qui caractérise des feuilles; plier les papiers en deux diagonalement; puis froisser en faisant une balle et défroisser; déplier et installer; renverser le sac d’origami sur le sol, disposer au sol, jeter au sol, etc.
 		</p>
 <br><br><br>
-		<img id="work-image-2" src="img/work/feuillesmortes2.png" width="98" onclick="zoomImage(this)">
-		<img id="work-image-3" src="img/work/feuillesmortes3.png" width="98" onclick="zoomImage(this)">
-		<img id="work-image-4" src="img/work/feuillesmortes4.png" width="98" onclick="zoomImage(this)">
+		<img id="work-image-2" src="img/work/papiercouleur_02.jpg" onclick="zoomImage(this)">
+		<img id="work-image-3" src="img/work/papiercouleur_03.jpg" onclick="zoomImage(this)">
 
 <br><br><br><p>____________________________________</p><br><br><br>
 
-		<img id="work-image-1" src="img/work/doppelganger1.png" width="300" onclick="zoomImage(this)">
+<img id="work-image-1" src="img/work/feuillesmortes1.jpg" onclick="zoomImage(this)">
+<br><br>
+<p style="font-weight: bold; font-size: 10px; font-style: italic; text-align: right;">
+	feuilles mortes, installation, paper, 2022
+</p>
+<br>
+<p>Au lieu d’accrocher les feuilles, j’ai décidé de les poser par terre dans l’installation feuilles mortes, en 2022. Mais J’invite les spectateurs à marcher sur l’amas de feuilles, à flâner dans les feuilles pour leur proposer une expérience à la fois physique et sensorielle. Le sens que les pieds sont touchés par les feuilles, et le bruit que l’on produit en marchant. La sensation fictive flotte dans le lieu que l’on connaît. Est-ce étrange ou intime? je m’y perds.
+</p>
+<br><br><br>
+<img id="work-image-2" src="img/work/feuillesmortes2.jpg" onclick="zoomImage(this)">
+<img id="work-image-3" src="img/work/feuillesmortes3.jpg" onclick="zoomImage(this)">
+<img id="work-image-4" src="img/work/feuillesmortes4.jpg" onclick="zoomImage(this)">
+
+<br><br><br><p>____________________________________</p><br><br><br>
+
+		<img id="work-image-1" src="img/work/doppelganger1.jpg" onclick="zoomImage(this)">
 		<br><br>
-		<p style="font-weight: bold; font-size: 10px; font-style: italic; text-align: right;">Doppelgänger, installation, acrylic paint on carton, 2022
+		<p style="font-weight: bold; font-size: 10px; font-style: italic; text-align: right;">
+			Doppelgänger, installation, acrylic on carton, 2022
 		</p>
 		<br>
-		<p>le travail a été conçu pour envisager la forme et la couleur ....le travail a été conçu pour envisager la forme et la couleur ....le travail a été conçu pour envisager la forme et la couleur ....le travail a été conçu pour envisager la forme et la couleur ....le travail a été conçu pour envisager la forme et la couleur ....le travail a été conçu pour envisager la forme et la couleur ....le travail a été conçu pour envisager la forme et la couleur ....le travail a été conçu pour envisager la forme et la couleur ....
+		<p>Réalisés dans le style du dessin augmenté (ou de la réalité augmentée), les portraits humains se multiplient dans le réel. Leurs identités s'attachent au lieu où ils sont situés en regardant deçà et delà. Ils existent simultanément à un même endroit, de différentes poses, mais souvent installés debout dans l’espace ou collé au mur. Leur taille est égale à celle d’un humain, la mienne. J’ai l’impression que cette taille humaine provoque momentanément une illusion de vraisemblance aux spectateurs comme si les peintures étaient de vrais humains. La confusion éphémère entre-deux, le sentiment d’étrangeté puis la peur s'enchaînent par ordre, restent un bref instant et disparaissent.
+
+			Le carton ondulé, un dispositif d’emballage pour l’usage banal, est le support principal pour le projet. Nous utilisons d’habitude ce carton d’emballage quand on déménage et quand on envoie un colis. Il est facile à le trouver dans la rue. Tandis que c’est une matière faite en fibre végétale qui ne dure pas suffisamment pour maintenir la peinture en état à cause de sa capacité d’absorption de l’humidité. Cela fragilise la peinture notamment à l’égard de la dégradation éventuelle. J’ai tenté de voir face à cette temporalité matérielle, que nous nous mettons les pieds dans la foule de portraits.
+			
 		</p>
 <br><br><br>
-		<img id="work-image-2" src="img/work/doppelganger2.png" width="98" onclick="zoomImage(this)">
+		<img id="work-image-2" src="img/work/doppelganger2.jpg" onclick="zoomImage(this)">
 
 <br><br><br><p>____________________________________</p><br><br><br>
 
