--- a/src/02.html
+++ b/src/02.html
@@ -14,8 +14,7 @@
 
 		body {
 			background-color: transparent;
-			/* padding-left: 20px;
-			padding-right: 20px; */
+			padding-left: 50px;
 		}
 		h1 {
 			font-size: 18px;
@@ -37,6 +36,14 @@
 		img {
 			margin-bottom: 30px;
 		}
+		@media only screen and (max-width: 800px) {
+			body {
+			background-color: transparent;
+			/* display: flex; */
+  			/* align-items: center;
+  			justify-content: center; */
+			padding-left: 0;
+			}}
 	</style>
 </head>
 <body>
